# Shellcode-Loader

./: README.EN.md  README.md
linux/allocation/: README.md
linux/allocation/memalign/: README.md
linux/allocation/mmap/: README.md
linux/allocation/posix_memalign/: README.md
linux/allocation/pvalloc/: README.md
linux/allocation/shmat/: README.md
linux/allocation/valloc/: README.md
linux/execution/: README.md
linux/execution/callback/: README.md
linux/execution/event/: README.md
linux/execution/thread/: README.md
linux/permission/: README.md
linux/storage/: README.md
linux/storage/stack/: README.md
linux/writing/: README.md
windows/: README.md
windows/allocation/: README.md
windows/allocation/AllocADsMem/: README.md
windows/allocation/CoTaskMemAlloc/: README.md
windows/allocation/CreateFileMapping/: README.md
windows/allocation/GlobalAlloc-GHND/: README.md
windows/allocation/GlobalAlloc-GPTR/: README.md
windows/allocation/HeapAlloc/: README.md
windows/allocation/NtAllocateVirtualMemory/: README.md
windows/allocation/NtCreateSection/: README.md
windows/execution/: README.md
windows/execution/thread/CreateRemoteThread/rust/with-windows-sys/: Cargo.toml
windows/execution/thread/CreateRemoteThread/rust/with-windows-sys/src/: main.rs
windows/permission/: README.md
windows/storage/: README.md
windows/storage/stack/rust/: Cargo.toml
windows/storage/stack/rust/plain-winapi/src/: main.rs
windows/storage/stack/rust/src/: main.rs
windows/storage/stack/rust/with-wrapper/src/: main.rs
windows/writing/: README.md
(+555 files in other folders)
