[package]
name = "shellcode-loader"
version = "0.1.0"
edition = "2021"
authors = ["Satria Ady Pradana <xathrya@reversing.id>"]

[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_Security"]}